[package]
name = "final-transfer-tracker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "final_transfer_tracker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
solana-security-txt = "1.1.1"
anchor-lang = { version = "0.31.1", features = ["event-cpi"] }

